fix address to string, add validate code
