# x/liquidity/types/errors.go
@@ -20,4 +20,11 @@ var (
 	ErrPoolBatchNotExists     = sdkerrors.Register(ModuleName, 12, "pool batch not exists")
 	ErrOrderBookInvalidity    = sdkerrors.Register(ModuleName, 13, "orderbook is not validity")
 	ErrBatchNotExecuted       = sdkerrors.Register(ModuleName, 14, "the liquidity pool batch is not executed")
+	ErrEmptyPoolCreatorAddr   = sdkerrors.Register(ModuleName, 15, "empty pool creator address")
+	ErrEmptyDepositorAddr   = sdkerrors.Register(ModuleName, 16, "empty pool depositor address")
+	ErrEmptyWithdrawerAddr   = sdkerrors.Register(ModuleName, 17, "empty pool withdrawer address")
+	ErrEmptySwapRequesterAddr   = sdkerrors.Register(ModuleName, 18, "empty pool swap requester address")
+	ErrBadPoolCoinAmount   = sdkerrors.Register(ModuleName, 19, "invalid pool coin amount")
+	ErrBadDepositCoinsAmount   = sdkerrors.Register(ModuleName, 20, "invalid pool coin amount")
+	ErrBadOfferCoinAmount   = sdkerrors.Register(ModuleName, 21, "invalid offer coin amount")
 )
